--- a/about-us.html
+++ b/about-us.html
@@ -610,7 +610,7 @@
                         <div class="instructors-container">
                             <div class="instructor-card">
                                 <div class="instructors-image">
-                                    <img src="./assets/images/instructor.png" alt="instructors-image">
+                                    <img abou src="./assets/images/instructor.png" alt="instructors-image">
                                 </div>
                                 <div class="instructors-content">
                                     <h3 class="orange-color">محمد عبد الحميد</h3>
