--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="courses-container-cards">
                         <div class="course-card">
                             <div class="course-image">
-                                <img src="./assets/images/card1.png" alt="course-image">
+                                <img src="./assets/images/graphic-large.png" alt="course-image">
                             </div>
                             <div class="course-content">
                                 <h3 class="yellow-color">دبلومة الجرافيك</h3>
@@ -183,11 +183,11 @@
                         </div>
                         <div class="course-card">
                             <div class="course-image">
-                                <img src="./assets/images/card1.png" alt="course-image">
+                                <img src="./assets/images/card4.png" alt="course-image">
                             </div>
                             <div class="course-content">
-                                <h3 class="blue-color">دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
+                                <h3 class="blue-color">دورة القاعدة النورانية</h3>
+                                <p>إذا نطق اللسان اتضح البيان!</p>
                             </div>
                         </div>
                         <div class="course-card">
@@ -195,8 +195,46 @@
                                 <img src="./assets/images/card1.png" alt="course-image">
                             </div>
                             <div class="course-content">
-                                <h3 class="primary-color">دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
+                                <h3 class="primary-color">دورة اللغة الألمانية</h3>
+                                <p>تعلم اللغات يضاعف فرص طفلك في المستقبل!</p>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <div class="course-image">
+                                <img src="./assets/images/learn.png" alt="course-image">
+                            </div>
+                            <div class="course-content">
+                                <h3 class="orange-color">دورة البرمجة للأطفال</h3>
+                                <p>احجز مقعدًا لطفلك في صفوف المستقبل!</p>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <div class="course-image">
+                                <img src="./assets/images/reading.png" alt="course-image">
+                            </div>
+                            <div class="course-content">
+                                <h3>دورة القارئ المثقف</h3>
+                                <p>قراءة كل يوم، نمو كل يوم!</p>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <div class="course-image">
+                                <img src="./assets/images/card3.png" alt="course-image">
+                            </div>
+                            <div class="course-content">
+                                <h3>دورة مبادئ البرمجة
+                                    للأطفال</h3>
+                                <p>اجعل طفلك كفؤا لمستقبله!</p>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <div class="course-image">
+                                <img src="./assets/images/card2.png" alt="course-image">
+                            </div>
+                            <div class="course-content">
+                                <h3> دورة اللغة الإنجليزية
+                                    التأسيسي</h3>
+                                <p>بناء لغوي قوي</p>
                             </div>
                         </div>
                         <div class="course-card">
@@ -204,44 +242,8 @@
                                 <img src="./assets/images/card1.png" alt="course-image">
                             </div>
                             <div class="course-content">
-                                <h3 class="orange-color">دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
-                            </div>
-                        </div>
-                        <div class="course-card">
-                            <div class="course-image">
-                                <img src="./assets/images/card1.png" alt="course-image">
-                            </div>
-                            <div class="course-content">
-                                <h3>دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
-                            </div>
-                        </div>
-                        <div class="course-card">
-                            <div class="course-image">
-                                <img src="./assets/images/card1.png" alt="course-image">
-                            </div>
-                            <div class="course-content">
-                                <h3>دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
-                            </div>
-                        </div>
-                        <div class="course-card">
-                            <div class="course-image">
-                                <img src="./assets/images/card1.png" alt="course-image">
-                            </div>
-                            <div class="course-content">
-                                <h3>دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
-                            </div>
-                        </div>
-                        <div class="course-card">
-                            <div class="course-image">
-                                <img src="./assets/images/card1.png" alt="course-image">
-                            </div>
-                            <div class="course-content">
-                                <h3>دبلومة الجرافيك</h3>
-                                <p>الجرافيك أول خطوة ناحية الإبداع!</p>
+                                <h3>دورة اللغة الإنجليزية</h3>
+                                <p>دورة اللغة الإنجليزية</p>
                             </div>
                         </div>
                     </div>
@@ -313,7 +315,7 @@
                     </div>
                     <div class="instructors-container">
                         <div class="instructor-card">
-                            <div class="instructors-image">
+                            <div class="instructors-image-sec">
                                 <img src="./assets/images/instructor.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
@@ -322,29 +324,29 @@
                             </div>
                         </div>
                         <div class="instructor-card">
-                            <div class="instructors-image">
-                                <img src="./assets/images/instructor.png" alt="instructors-image">
+                            <div class="instructors-image-sec">
+                                <img src="./assets/images/instructor-girl.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
-                                <h3 class="orange-color">محمد عبد الحميد</h3>
+                                <h3 class="orange-color">سماح السيوفي</h3>
+                                <p>معلمة متخصص في تعليم البرمجة البسطة والمتقدمة للاطفال</p>
+                            </div>
+                        </div>
+                        <div class="instructor-card">
+                            <div class="instructors-image-sec">
+                                <img src="./assets/images/instructor3.png" alt="instructors-image">
+                            </div>
+                            <div class="instructors-content">
+                                <h3 class="orange-color">راشد السعيد</h3>
                                 <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
                             </div>
                         </div>
                         <div class="instructor-card">
-                            <div class="instructors-image">
-                                <img src="./assets/images/instructor.png" alt="instructors-image">
+                            <div class="instructors-image-sec">
+                                <img src="./assets/images/instructor4.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
-                                <h3 class="orange-color">محمد عبد الحميد</h3>
-                                <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
-                            </div>
-                        </div>
-                        <div class="instructor-card">
-                            <div class="instructors-image">
-                                <img src="./assets/images/instructor.png" alt="instructors-image">
-                            </div>
-                            <div class="instructors-content">
-                                <h3 class="orange-color">محمد عبد الحميد</h3>
+                                <h3 class="orange-color">سراج الاحمدي</h3>
                                 <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
                             </div>
                         </div>
