--- a/about-us.html
+++ b/about-us.html
@@ -607,7 +607,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="instructors-container">
+                        <div class="instructors-container-sec">
                             <div class="instructor-card">
                                 <div class="instructors-image">
                                     <img abou src="./assets/images/instructor.png" alt="instructors-image">
@@ -708,8 +708,8 @@
                                         <img src="./assets/images/card4.png" alt="course-image">
                                     </div>
                                     <div class="course-content">
-                                        <h3 class="blue-color">دبلومة الجرافيك</h3>
-                                        <p>الجرافيك أول خطوة ناحية الإبداع!</p>
+                                        <h3 class="blue-color">دورة القاعدة النورانية</h3>
+                                        <p>إذا نطق اللسان اتضح البيان!</p>
                                     </div>
                                 </div>
                                 <div class="course-card">
@@ -717,8 +717,8 @@
                                         <img src="./assets/images/card1.png" alt="course-image">
                                     </div>
                                     <div class="course-content">
-                                        <h3 class="primary-color">دبلومة الجرافيك</h3>
-                                        <p>الجرافيك أول خطوة ناحية الإبداع!</p>
+                                        <h3 class="primary-color">دورة اللغة الألمانية</h3>
+                                        <p>تعلم اللغات يضاعف فرص طفلك في المستقبل!</p>
                                     </div>
                                 </div>
                                 <div class="course-card">
@@ -726,8 +726,8 @@
                                         <img src="./assets/images/learn.png" alt="course-image">
                                     </div>
                                     <div class="course-content">
-                                        <h3 class="orange-color">دبلومة الجرافيك</h3>
-                                        <p>الجرافيك أول خطوة ناحية الإبداع!</p>
+                                        <h3 class="orange-color">دورة البرمجة للأطفال</h3>
+                                        <p>احجز مقعدًا لطفلك في صفوف المستقبل!</p>
                                     </div>
                                 </div>
                             </div>
