--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         </div>
                     </div>
                     <div class="instructors-container">
-                        <div class="instructor-card">
+                        <div class="instructor-card-sec">
                             <div class="instructors-image-sec">
                                 <img src="./assets/images/instructor.png" alt="instructors-image">
                             </div>
@@ -323,7 +323,7 @@
                                 <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
                             </div>
                         </div>
-                        <div class="instructor-card">
+                        <div class="instructor-card-sec">
                             <div class="instructors-image-sec">
                                 <img src="./assets/images/instructor-girl.png" alt="instructors-image">
                             </div>
@@ -332,7 +332,7 @@
                                 <p>معلمة متخصص في تعليم البرمجة البسطة والمتقدمة للاطفال</p>
                             </div>
                         </div>
-                        <div class="instructor-card">
+                        <div class="instructor-card-sec">
                             <div class="instructors-image-sec">
                                 <img src="./assets/images/instructor3.png" alt="instructors-image">
                             </div>
@@ -341,7 +341,7 @@
                                 <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
                             </div>
                         </div>
-                        <div class="instructor-card">
+                        <div class="instructor-card-sec">
                             <div class="instructors-image-sec">
                                 <img src="./assets/images/instructor4.png" alt="instructors-image">
                             </div>
