done-about&home

--- a/about-us.html
+++ b/about-us.html
@@ -414,7 +414,6 @@
                         </svg>
                     </div>
                     <div class="benifit-content-sec">
-                        <div class="card-row">
                             <div class="learn-card1-sec o-color">
                                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -494,8 +493,6 @@
                                     والمشاكل
                                 </p>
                             </div>
-                        </div>
-                        <div class="card-row">
                             <div class="learn-card1-sec b-color">
                                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -588,7 +585,6 @@
                                     سوق
                                     العمل</p>
                             </div>
-                        </div>
                     </div>
                 </div>
                 <!-- instructors -->
@@ -609,7 +605,7 @@
                         </div>
                         <div class="instructors-container-sec">
                             <div class="instructor-card">
-                                <div class="instructors-image">
+                                <div class="instructors-image g-color">
                                     <img abou src="./assets/images/instructor.png" alt="instructors-image">
                                 </div>
                                 <div class="instructors-content">
@@ -618,7 +614,7 @@
                                 </div>
                             </div>
                             <div class="instructor-card">
-                                <div class="instructors-image">
+                                <div class="instructors-image p-color">
                                     <img src="./assets/images/instructor-girl.png" alt="instructors-image">
                                 </div>
                                 <div class="instructors-content">
@@ -627,7 +623,7 @@
                                 </div>
                             </div>
                             <div class="instructor-card">
-                                <div class="instructors-image">
+                                <div class="instructors-image lb-color">
                                     <img src="./assets/images/instructor3.png" alt="instructors-image">
                                 </div>
                                 <div class="instructors-content">
