--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     </div>
                     <div class="instructors-container">
                         <div class="instructor-card-sec">
-                            <div class="instructors-image-sec">
+                            <div class="instructors-image-sec g-color">
                                 <img src="./assets/images/instructor.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
@@ -323,7 +323,7 @@
                                 <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
                             </div>
                         </div>
-                        <div class="instructor-card-sec">
+                        <div class="instructor-card-sec p-color">
                             <div class="instructors-image-sec">
                                 <img src="./assets/images/instructor-girl.png" alt="instructors-image">
                             </div>
@@ -333,7 +333,7 @@
                             </div>
                         </div>
                         <div class="instructor-card-sec">
-                            <div class="instructors-image-sec">
+                            <div class="instructors-image-sec lb-color">
                                 <img src="./assets/images/instructor3.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
@@ -342,7 +342,7 @@
                             </div>
                         </div>
                         <div class="instructor-card-sec">
-                            <div class="instructors-image-sec">
+                            <div class="instructors-image-sec l-color">
                                 <img src="./assets/images/instructor4.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
