--- a/about-us.html
+++ b/about-us.html
@@ -603,32 +603,36 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="instructors-container-sec">
-                            <div class="instructor-card">
-                                <div class="instructors-image g-color">
-                                    <img abou src="./assets/images/instructor.png" alt="instructors-image">
-                                </div>
-                                <div class="instructors-content">
-                                    <h3 class="orange-color">محمد عبد الحميد</h3>
-                                    <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
-                                </div>
-                            </div>
-                            <div class="instructor-card">
-                                <div class="instructors-image p-color">
-                                    <img src="./assets/images/instructor-girl.png" alt="instructors-image">
-                                </div>
-                                <div class="instructors-content">
-                                    <h3 class="orange-color">سماح السيوفي</h3>
-                                    <p>معلمة متخصص في تعليم البرمجة البسطة والمتقدمة للاطفال</p>
-                                </div>
-                            </div>
-                            <div class="instructor-card">
-                                <div class="instructors-image lb-color">
-                                    <img src="./assets/images/instructor3.png" alt="instructors-image">
-                                </div>
-                                <div class="instructors-content">
-                                    <h3 class="orange-color">راشد السعيد</h3>
-                                    <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
+                        <div class="instructors-container-card-sec">
+                            <div class="instructor_section_card_images">
+                                <div class="instructors-container-sec">
+                                    <div class="instructor-card">
+                                        <div class="instructors-image g-color">
+                                            <img abou src="./assets/images/instructor.png" alt="instructors-image">
+                                        </div>
+                                        <div class="instructors-content">
+                                            <h3 class="orange-color">محمد عبد الحميد</h3>
+                                            <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
+                                        </div>
+                                    </div>
+                                    <div class="instructor-card">
+                                        <div class="instructors-image p-color">
+                                            <img src="./assets/images/instructor-girl.png" alt="instructors-image">
+                                        </div>
+                                        <div class="instructors-content">
+                                            <h3 class="orange-color">سماح السيوفي</h3>
+                                            <p>معلمة متخصص في تعليم البرمجة البسطة والمتقدمة للاطفال</p>
+                                        </div>
+                                    </div>
+                                    <div class="instructor-card">
+                                        <div class="instructors-image lb-color">
+                                            <img src="./assets/images/instructor3.png" alt="instructors-image">
+                                        </div>
+                                        <div class="instructors-content">
+                                            <h3 class="orange-color">راشد السعيد</h3>
+                                            <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -690,7 +694,7 @@
                                 </div>
                             </div>
                             <div class="courses-container-cards">
-                                <div class="course-card">
+                                <div class="course-card-sec">
                                     <div class="course-image">
                                         <img src="./assets/images/graphic.png" alt="course-image">
                                     </div>
@@ -699,7 +703,7 @@
                                         <p>الجرافيك أول خطوة ناحية الإبداع!</p>
                                     </div>
                                 </div>
-                                <div class="course-card">
+                                <div class="course-card-sec">
                                     <div class="course-image">
                                         <img src="./assets/images/card4.png" alt="course-image">
                                     </div>
@@ -708,7 +712,7 @@
                                         <p>إذا نطق اللسان اتضح البيان!</p>
                                     </div>
                                 </div>
-                                <div class="course-card">
+                                <div class="course-card-sec">
                                     <div class="course-image">
                                         <img src="./assets/images/card1.png" alt="course-image">
                                     </div>
@@ -717,7 +721,7 @@
                                         <p>تعلم اللغات يضاعف فرص طفلك في المستقبل!</p>
                                     </div>
                                 </div>
-                                <div class="course-card">
+                                <div class="course-card-sec">
                                     <div class="course-image">
                                         <img src="./assets/images/learn.png" alt="course-image">
                                     </div>
