--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="goals-faqs-item">
                                 <div class="goals-faqs-item-header">
                                     <i class="fas fa-hammer"></i>
-                                    <h4>مهــــــــارات</h4>
+                                    <h4>أخـــــــلاق</h4>
                                 </div>
                                 <div class="goals-faqs-item-description">
                                     <p>نعمل على تطوير مهارات طفلك الشخصية والعلمية، حتى يكتسب التفكير الإبداعي والطرق المختلفة المميزة التي تواكب جيله.</p>
@@ -119,7 +119,7 @@
                             <div class="goals-faqs-item">
                                 <div class="goals-faqs-item-header">
                                     <i class="fas fa-hammer"></i>
-                                    <h4>مهــــــــارات</h4>
+                                    <h4>معــــرفة</h4>
                                 </div>
                                 <div class="goals-faqs-item-description">
                                     <p>نعمل على تطوير مهارات طفلك الشخصية والعلمية، حتى يكتسب التفكير الإبداعي والطرق المختلفة المميزة التي تواكب جيله.</p>
@@ -128,7 +128,7 @@
                             <div class="goals-faqs-item">
                                 <div class="goals-faqs-item-header">
                                     <i class="fas fa-hammer"></i>
-                                    <h4>مهــــــــارات</h4>
+                                    <h4>تقنيـــــــــــة</h4>
                                 </div>
                                 <div class="goals-faqs-item-description">
                                     <p>نعمل على تطوير مهارات طفلك الشخصية والعلمية، حتى يكتسب التفكير الإبداعي والطرق المختلفة المميزة التي تواكب جيله.</p>
@@ -146,11 +146,11 @@
                     <div class="goals-results-container">
                         <div class="results">
                             <span>500</span>
-                            <h5>الكــــــــورسات</h5>
+                            <h5>سنين الخبرة</h5>
                         </div>
                         <div class="results">
                             <span>500</span>
-                            <h5>الكــــــــورسات</h5>
+                            <h5>الطـــــــــــــــــــــــلاب</h5>
                         </div>
                         <div class="results">
                             <span>500</span>
@@ -323,8 +323,8 @@
                                 <p>معلم متخصص في تعليم اللغة الانجليزية للاطفال</p>
                             </div>
                         </div>
-                        <div class="instructor-card-sec p-color">
-                            <div class="instructors-image-sec">
+                        <div class="instructor-card-sec ">
+                            <div class="instructors-image-sec p-color">
                                 <img src="./assets/images/instructor-girl.png" alt="instructors-image">
                             </div>
                             <div class="instructors-content">
